--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -25,7 +25,6 @@
   - vector
 
 - name: Create group
-  become: true
   ansible.builtin.group:
     name: "{{ vector_group }}"
     state: present
@@ -33,7 +32,6 @@
   - vector
 
 - name: Create user
-  become: true
   ansible.builtin.user:
     name: "{{ vector_user }}"
     groups: "{{ vector_group }}"
@@ -42,7 +40,6 @@
   - vector
 
 - name: Copy binary file
-  become: true
   ansible.builtin.copy:
     remote_src: true
     src: "{{ vector_tmp_dir }}/bin/vector"
@@ -54,7 +51,6 @@
   - vector
 
 - name: Create directory on /etc
-  become: true
   ansible.builtin.file:
     path: "{{ vector_dir }}"
     state: directory
@@ -65,7 +61,6 @@
   - vector
 
 - name: Copy congif file
-  become: true
   ansible.builtin.template:
     src: templates/vector.toml.j2
     dest: "{{ vector_dir }}/vector.toml"
@@ -76,7 +71,6 @@
   - vector
 
 - name: Create directory on /var/lib
-  become: true
   ansible.builtin.file:
     path: "{{ vector_data_dir }}"
     state: directory
@@ -87,7 +81,6 @@
   - vector
 
 - name: Copy service file
-  become: true
   ansible.builtin.copy:
     remote_src: true
     src: "{{ vector_tmp_dir }}/etc/systemd/vector.service"
@@ -97,9 +90,12 @@
   - vector
 
 - name: Start service
-  become: true
   ansible.builtin.service:
     name: vector
     state: started
+  register: command_result
+  failed_when:
+    - command_result.failed
+    - '"unknown state" not in command_result.msg'
   tags:
   - vector
